--- a/Assets/UI/HUD.uxml
+++ b/Assets/UI/HUD.uxml
@@ -1,8 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <Style src="project://database/Assets/UIToolkit/HUD.uss?fileID=7433441132597879392&amp;guid=a39a969534a34c5418a5a5ed3f0e3c69&amp;type=3#HUD" />
+    <Style src="project://database/Assets/UI/HUD.uss?fileID=7433441132597879392&amp;guid=a39a969534a34c5418a5a5ed3f0e3c69&amp;type=3#HUD" />
     <ui:VisualElement name="Panel" class="panel" style="flex-grow: 1;">
         <ui:VisualElement name="MoneyLabel" class="money-label" style="flex-grow: 1;">
-            <ui:Label text="$5,000" name="MoneyText" class="text-scaling" style="align-items: stretch; -unity-font-style: normal;" />
+            <ui:Label text="$0" name="MoneyText" style="align-items: stretch; -unity-font-style: normal;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
