--- a/Assets/UI/HUD.uxml
+++ b/Assets/UI/HUD.uxml
@@ -1,8 +1,11 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/HUD.uss?fileID=7433441132597879392&amp;guid=a39a969534a34c5418a5a5ed3f0e3c69&amp;type=3#HUD" />
     <ui:VisualElement name="Panel" class="panel" style="flex-grow: 1;">
-        <ui:VisualElement name="MoneyLabel" class="money-label" style="flex-grow: 1;">
+        <ui:VisualElement name="MoneyLabel" class="money-label label-color" style="flex-grow: 1;">
             <ui:Label text="$0" name="MoneyText" style="align-items: stretch; -unity-font-style: normal;" />
+        </ui:VisualElement>
+        <ui:VisualElement name="Hotbar" class="label-color hotbar-label" style="flex-grow: 1;">
+            <ui:Button text="Button" name="BuildingButton" class="hotbar-button label-color" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
