--- a/Assets/UI/HUD.uss
+++ b/Assets/UI/HUD.uss
@@ -44,7 +44,7 @@
     top: auto;
     position: absolute;
     left: auto;
-    width: 85%;
+    width: 60%;
     height: 10%;
     max-height: 10%;
     min-height: 10%;
@@ -83,6 +83,10 @@
     padding-left: 0;
     padding-top: 0;
     padding-bottom: 0;
-    margin-left: 25px;
-    margin-right: 25px;
+    margin-left: 35px;
+    margin-right: 35px;
+}
+
+.hotbar-button:hover {
+    background-color: rgb(236, 229, 177);
 }
