Created empty buildable GUI

--- a/Assets/UI/HUD.uxml
+++ b/Assets/UI/HUD.uxml
@@ -5,9 +5,9 @@
             <ui:Label text="$0" name="MoneyText" style="align-items: stretch; -unity-font-style: normal;" />
         </ui:VisualElement>
         <ui:VisualElement name="Hotbar" class="label-color hotbar-label" style="flex-grow: 1;">
-            <ui:Button text="Button" name="BuildingButton" class="hotbar-button label-color" />
-            <ui:Button text="Button" name="StorageButton" class="hotbar-button label-color" />
-            <ui:Button text="Button" name="IngredientStoreButton" class="hotbar-button label-color" />
+            <ui:Button text="Build" name="BuildingButton" class="hotbar-button label-color" />
+            <ui:Button text="Storage" name="StorageButton" class="hotbar-button label-color" />
+            <ui:Button text="Store" name="IngredientStoreButton" class="hotbar-button label-color" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
