--- a/Assets/UI/HUD.uss
+++ b/Assets/UI/HUD.uss
@@ -1,5 +1,5 @@
 .panel {
-    background-color: rgba(67, 67, 67, 0);
+    background-color: rgba(0, 0, 0, 0);
     -unity-background-image-tint-color: rgb(255, 255, 255);
     -unity-font-definition: url('project://database/Assets/UnityDefaultRuntimeTheme.tss?fileID=2230732570650464555&guid=9ef46d5005e01fd4e9fbf7c4624b5a83&type=3#NotInter-Regular');
     -unity-text-align: upper-left;
@@ -89,4 +89,23 @@
 
 .hotbar-button:hover {
     background-color: rgb(236, 229, 177);
+    border-color: rgb(209, 159, 39);
+    -unity-text-outline-color: rgba(0, 0, 0, 0);
+    scale: 1.025 1.025;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-out;
+    transition-property: scale;
+}
+
+.hotbar-button-selected {
+    background-color: rgb(236, 229, 177);
+    -unity-text-outline-color: rgba(0, 0, 0, 0);
+    border-left-color: rgb(209, 159, 39);
+    border-right-color: rgb(209, 159, 39);
+    border-top-color: rgb(209, 159, 39);
+    border-bottom-color: rgb(209, 159, 39);
+    scale: 1.025 1.025;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-out;
+    transition-property: scale;
 }
