--- a/Assets/UI/BuildMenu.uxml
+++ b/Assets/UI/BuildMenu.uxml
@@ -1,13 +1,11 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/InventoryType.uss?fileID=7433441132597879392&amp;guid=a7b346dae11394f4d95c32829218338a&amp;type=3#InventoryType" />
-    <ui:VisualElement name="Panel" class="panel" style="flex-grow: 1;">
-        <ui:VisualElement name="OuterContainer" class="outer-container" style="flex-grow: 1;">
-            <ui:VisualElement name="TitleContainer" class="title-container" style="flex-grow: 1; align-items: flex-start;">
-                <ui:Label text="Buildings" class="h1" />
-            </ui:VisualElement>
-            <ui:ScrollView name="ScrollView" horizontal-scroller-visibility="Hidden" vertical-scroller-visibility="AlwaysVisible" vertical-page-size="-1" class="items-container">
-                <ui:VisualElement name="ScrollContainer" class="scroll-container" style="flex-grow: 1;" />
-            </ui:ScrollView>
+    <ui:VisualElement name="OuterContainer" class="outer-container" style="flex-grow: 1; align-self: center; position: absolute; top: 15%; left: auto; right: auto; bottom: auto;">
+        <ui:VisualElement name="TitleContainer" class="title-container" style="flex-grow: 1; align-items: flex-start;">
+            <ui:Label text="Buildings" class="h1" />
         </ui:VisualElement>
+        <ui:ScrollView name="ScrollView" horizontal-scroller-visibility="Hidden" vertical-scroller-visibility="AlwaysVisible" vertical-page-size="-1" class="items-container">
+            <ui:VisualElement name="ScrollContainer" class="scroll-container" style="flex-grow: 1;" />
+        </ui:ScrollView>
     </ui:VisualElement>
 </ui:UXML>
